force-app/main/default/objects/Revision_History__c/Revision_History__c.object-meta.xml
<CustomObject>
    <label>Revision History</label>
    <nameField>
        <displayFormat>RevH-{0000000}</displayFormat>
        <label>Revision History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revision Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>