force-app/main/default/objects/Revision_History__c/fields/Audit_Code__c.field-meta.xml
<CustomField>
    <fullName>Audit_Code__c</fullName>
    <label>Audit #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>