force-app/main/default/objects/Revision_History__c/fields/Audit_Schedule_Number__c.field-meta.xml
<CustomField>
    <fullName>Audit_Schedule_Number__c</fullName>
    <label>Audit Schedule #</label>
    <referenceTo>BMX_Audits_Schedule__c</referenceTo>
    <relationshipLabel>Revision Table</relationshipLabel>
    <relationshipName>Revision_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>