force-app/main/default/objects/Revision_History__c/fields/Schedule_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Change_Reason__c</fullName>
    <label>Schedule Change reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Addition of an Audit</fullName>
            </value>
            <value>
                <fullName>Cancellation of an Audit</fullName>
            </value>
            <value>
                <fullName>Change in the Audited site</fullName>
            </value>
            <value>
                <fullName>Change in the Audit method</fullName>
            </value>
            <value>
                <fullName>Change in the Audit objectives</fullName>
            </value>
            <value>
                <fullName>Change in the Audit scheduled quarter</fullName>
            </value>
            <value>
                <fullName>Change in the Audit title</fullName>
            </value>
            <value>
                <fullName>Change of the Reason for Audit</fullName>
            </value>
            <value>
                <fullName>Creation of the schedule</fullName>
            </value>
            <value>
                <fullName>Yearly focus objectives of the schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>