force-app/main/default/objects/Revision_History__c/fields/Supporting_Details__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Details__c</fullName>
    <label>Supporting Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>