force-app/main/default/objects/Revision_History__c/validationRules/Check_Audit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Audit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Schedule_Change_Reason__c, &apos;Yearly focus objectives of the schedule&apos;)),
    NOT(ISPICKVAL(Schedule_Change_Reason__c, &apos;Creation of the schedule&apos;)),
    NOT(ISBLANK(TEXT(Schedule_Change_Reason__c))),
    ISBLANK(Audit_Code__c)
)</errorConditionFormula>
    <errorDisplayField>Audit_Code__c</errorDisplayField>
    <errorMessage>Audit Field is Mandatory when Schedule_Change_Reason is not “Yearly focus Objective of the schedule” or “Creation of the schedule”</errorMessage>
</ValidationRule>